--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 <header>
-   
+   <img src="logo.png" alt="Logo" />
+        <h1>Acceso seguro</h1>
 <nav class="navegacion-principal">
         <button><span><a href="principal.html">Inicio</a></span></button>
         <button><span><a href="seson.html">Iniciar sesion</a></span></button>
