--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleP.css">
     <link rel="preload" href="styleP.css" as="style">
-    <title>Cabina</title>
+     header img {
+            max-height: 50px; /* Ajusta el tamaño del logo */
+        }
+    <title>Acceso seguro</title>
 </head>
 <body>
 <header>
