--- a/index.html
+++ b/index.html
@@ -46,10 +46,9 @@
         <h1>Acceso seguro</h1>
         <!-- Navegación principal -->
         <nav class="navegacion-principal">
-            <button><a href="principal.html">Inicio</a></button>
+            <button><a href="index.html">Inicio</a></button>
             <button><a href="seson.html">Iniciar sesión</a></button>
-            <button><a href="services.html">Servicios</a></button>
-            <button><a href="contact.html">Contacto</a></button>
+            
         </nav>
     </header>
 
