--- a/seson.html
+++ b/seson.html
@@ -3,36 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="sesonstyle.css">
-    <link rel="preload" href="sesonstyle.css" as="style">
-    <title>Document</title>
+    <link rel="stylesheet" href="styleP.css">
+    <link rel="preload" href="styleP.css" as="style">
+     header img {
+            max-height: 50px; /* Ajusta el tamaño del logo */
+        }
+    <title>Acceso seguro</title>
 </head>
 <body>
-<div class="form-container">
-	<p class="title">Inicio de Sesion</p>
-	<form class="form" action="conexion1.php" method="POST">
-		<div class="input-group">
-			<label for="username">Usuario</label>
-			<input type="text" name="username" id="username" placeholder="">
-		</div>
-		<div class="input-group">
-			<label for="password">Contraseña</label>
-			<input type="password" name="password" id="password" placeholder="">
-			<div class="forgot">
-				<a rel="noopener noreferrer" href="#"> ?</a>
-			</div>
-		</div>
-		<button class="sign">Ingresar</button>
-	</form>
-	<div class="social-message">
-		<div class="line"></div>
-		<p class="message">Login with social accounts</p>
-		<div class="line"></div>
-	</div>
-	
-	<p class="signup">?
-		<a rel="noopener noreferrer" href="#" class="">5</a>
-	</p>
-</div>    
+<header>
+   <img src="logo.png" alt="Logo" />
+        <h1>Acceso seguro</h1>
+<nav class="navegacion-principal">
+        <button><span><a href="principal.html">Inicio</a></span></button>
+        <button><span><a href="seson.html">Iniciar sesion</a></span></button>
+        <button><span><a href="services.html">Servicios</a></span></button>
+        <button><span><a href="contact.html">Contacto</a></span></button>
+      </nav>
+    </header>
+    <head>
+      <h2 >Guillermo</h2>
+      </head>
+    <section>
+      <img src="img/1223.webp" alt="Imagen de fondo" class="full-image">
+      </section>
+      <div class="nav">
+      <h1 class="titulo">Protección Integral para Todos: Innovación en Higiene con Nuestras Cabinas Sanitizantes</h1>
+    </div>
+
+<h2>En un mundo donde la seguridad sanitaria es primordial, las cabinas sanitizantes se han convertido en una herramienta 
+    esencial para proteger a las personas en espacios concurridos. Ofrecemos soluciones innovadoras que eliminan bacterias, 
+    virus y otros agentes contaminantes de manera rápida y eficiente.</h2>
+
+    <h1>¿Qué es una Cabina Sanitizante?</h1>
+       <h2> Una cabina sanitizante es un dispositivo diseñado para la desinfección completa de personas, objetos o productos antes de ingresar a un área específica. Utiliza tecnologías avanzadas como:
+        
+        <p>Nebulización de desinfectantes no tóxicos.</p>
+        <p>Luz ultravioleta (UV-C) para la desinfección sin contacto.</p>
+        <p>Sistema de ventilación controlada para una experiencia segura y cómoda.</p></h2>
 </body>
+<footer>
+    derechos reservados
+</footer>
 </html>
