--- a/seson.html
+++ b/seson.html
@@ -1,48 +1,59 @@
+<?php
+// Configuración para la conexión a SQL Server
+$serverName = "localhost";
+$connectionOptions = [
+    "Database" => "Seguridad", //nombre de la base de datos
+    "Uid" => "sa",// usuario
+    "PWD" => "1234"// contrasena
+];
+
+// Crear la conexión
+$conn = sqlsrv_connect($serverName, $connectionOptions);
+
+if (!$conn) {
+    die("Conexión fallida: " . print_r(sqlsrv_errors(), true));
+}
+
+// Verificar si el formulario fue enviado
+if ($_SERVER['REQUEST_METHOD'] === 'POST') {
+    $username = $_POST['username'];
+    $password = $_POST['password'];
+
+    // Cifrar la contraseña con MD5
+    $hashed_password = md5($password);
+
+    // Verificar usuario y contraseña
+    $query = "SELECT 1 FROM Usuarios WHERE Username = ? AND Password = ?";
+    $params = [$username, $hashed_password];
+
+    $stmt = sqlsrv_query($conn, $query, $params);
+
+    if ($stmt && sqlsrv_fetch_array($stmt)) {
+        echo "Inicio de sesión exitoso. Bienvenido, $username.";
+    } else {
+        echo "Usuario o contraseña incorrectos.";
+    }
+}
+?>
+
+<!-- Formulario HTML -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleP.css">
-    <link rel="preload" href="styleP.css" as="style">
-     header img {
-            max-height: 50px; /* Ajusta el tamaño del logo */
-        }
-    <title>Acceso seguro</title>
+    <title>Inicio de Sesión</title>
 </head>
 <body>
-<header>
-   <img src="logo.png" alt="Logo" />
-        <h1>Acceso seguro</h1>
-<nav class="navegacion-principal">
-        <button><span><a href="principal.html">Inicio</a></span></button>
-        <button><span><a href="seson.html">Iniciar sesion</a></span></button>
-        <button><span><a href="services.html">Servicios</a></span></button>
-        <button><span><a href="contact.html">Contacto</a></span></button>
-      </nav>
-    </header>
-    <head>
-      <h2 >Guillermo</h2>
-      </head>
-    <section>
-      <img src="img/1223.webp" alt="Imagen de fondo" class="full-image">
-      </section>
-      <div class="nav">
-      <h1 class="titulo">Protección Integral para Todos: Innovación en Higiene con Nuestras Cabinas Sanitizantes</h1>
-    </div>
-
-<h2>En un mundo donde la seguridad sanitaria es primordial, las cabinas sanitizantes se han convertido en una herramienta 
-    esencial para proteger a las personas en espacios concurridos. Ofrecemos soluciones innovadoras que eliminan bacterias, 
-    virus y otros agentes contaminantes de manera rápida y eficiente.</h2>
-
-    <h1>¿Qué es una Cabina Sanitizante?</h1>
-       <h2> Una cabina sanitizante es un dispositivo diseñado para la desinfección completa de personas, objetos o productos antes de ingresar a un área específica. Utiliza tecnologías avanzadas como:
-        
-        <p>Nebulización de desinfectantes no tóxicos.</p>
-        <p>Luz ultravioleta (UV-C) para la desinfección sin contacto.</p>
-        <p>Sistema de ventilación controlada para una experiencia segura y cómoda.</p></h2>
+    <h1>Inicio de Sesión</h1>
+    <form action="login.php" method="POST">
+        <label for="username">Usuario:</label>
+        <input type="text" id="username" name="username" required>
+        <br>
+        <label for="password">Contraseña:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
+        <button type="submit">Iniciar Sesión</button>
+    </form>
 </body>
-<footer>
-    derechos reservados
-</footer>
 </html>
