--- a/seson.html
+++ b/seson.html
@@ -1,11 +1,14 @@
 <?php
-// Configuración para la conexión a SQL Server
-$serverName = "localhost";
-$connectionOptions = [
-    "Database" => "Seguridad", //nombre de la base de datos
-    "Uid" => "sa",// usuario
-    "PWD" => "1234"// contrasena
-];
+<?php
+// Configuración de la conexión a la base de datos
+$serverName = "tcp:memo96.database.windows.net,1433";
+$connectionOptions = array(
+    "Database" => "SafePass",
+    "Uid" => "memo96",
+    "PWD" => "Hmcrgl09",
+    "Encrypt" => true,
+    "TrustServerCertificate" => false
+);
 
 // Crear la conexión
 $conn = sqlsrv_connect($serverName, $connectionOptions);
