--- a/index.html
+++ b/index.html
@@ -5,81 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleP.css">
     <link rel="preload" href="styleP.css" as="style">
-    <title>Acceso seguro</title>
-    <style>
-        /* Estilo básico para el logo */
-        header img {
+     header img {
             max-height: 50px; /* Ajusta el tamaño del logo */
         }
-        /* Ajusta el diseño del header */
-        header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 10px 20px;
-            background-color: #f4f4f4;
-        }
-        /* Diseño de la barra de navegación */
-        .navegacion-principal button {
-            margin: 0 5px;
-        }
-        .navegacion-principal a {
-            text-decoration: none;
-            color: black;
-        }
-        /* Imagen de fondo */
-        .full-image {
-            width: 100%;
-            height: auto;
-        }
-        /* Texto centrado en la sección */
-        .titulo {
-            text-align: center;
-            margin: 20px 0;
-        }
-    </style>
+    <title>Acceso seguro</title>
 </head>
 <body>
-    <header>
-        <!-- Logo -->
-        <img src="logo.png" alt="Logo" />
+<header>
+   <img src="logo.png" alt="Logo" />
         <h1>Acceso seguro</h1>
-        <!-- Navegación principal -->
-        <nav class="navegacion-principal">
-            <button><a href="index.html">Inicio</a></button>
-            <button><a href="seson.html">Iniciar sesión</a></button>
-            
-        </nav>
+<nav class="navegacion-principal">
+        <button><span><a href="principal.html">Inicio</a></span></button>
+        <button><span><a href="seson.html">Iniciar sesion</a></span></button>
+        <button><span><a href="services.html">Servicios</a></span></button>
+        <button><span><a href="contact.html">Contacto</a></span></button>
+      </nav>
     </header>
-
-    <!-- Sección de bienvenida -->
+    <head>
+      <h2 >Guillermo</h2>
+      </head>
     <section>
-        <h2>Guillermo</h2>
-        <img src="img/1223.webp" alt="Imagen de fondo" class="full-image">
-    </section>
-
-    <!-- Contenido principal -->
-    <div class="nav">
-        <h1 class="titulo">Protección Integral para Todos: Innovación en Higiene con Nuestras Cabinas Sanitizantes</h1>
+      <img src="img/1223.webp" alt="Imagen de fondo" class="full-image">
+      </section>
+      <div class="nav">
+      <h1 class="titulo">Protección Integral para Todos: Innovación en Higiene con Nuestras Cabinas Sanitizantes</h1>
     </div>
 
-    <h2>En un mundo donde la seguridad sanitaria es primordial, las cabinas sanitizantes se han convertido en una herramienta 
-        esencial para proteger a las personas en espacios concurridos. Ofrecemos soluciones innovadoras que eliminan bacterias, 
-        virus y otros agentes contaminantes de manera rápida y eficiente.</h2>
+<h2>En un mundo donde la seguridad sanitaria es primordial, las cabinas sanitizantes se han convertido en una herramienta 
+    esencial para proteger a las personas en espacios concurridos. Ofrecemos soluciones innovadoras que eliminan bacterias, 
+    virus y otros agentes contaminantes de manera rápida y eficiente.</h2>
 
     <h1>¿Qué es una Cabina Sanitizante?</h1>
-    <h2> 
-        Una cabina sanitizante es un dispositivo diseñado para la desinfección completa de personas, objetos o productos antes de ingresar a un área específica. Utiliza tecnologías avanzadas como:
-    </h2>
-    <ul>
-        <li>Nebulización de desinfectantes no tóxicos.</li>
-        <li>Luz ultravioleta (UV-C) para la desinfección sin contacto.</li>
-        <li>Sistema de ventilación controlada para una experiencia segura y cómoda.</li>
-    </ul>
-
-    <!-- Footer -->
-    <footer>
-        <p>Derechos reservados</p>
-    </footer>
+       <h2> Una cabina sanitizante es un dispositivo diseñado para la desinfección completa de personas, objetos o productos antes de ingresar a un área específica. Utiliza tecnologías avanzadas como:
+        
+        <p>Nebulización de desinfectantes no tóxicos.</p>
+        <p>Luz ultravioleta (UV-C) para la desinfección sin contacto.</p>
+        <p>Sistema de ventilación controlada para una experiencia segura y cómoda.</p></h2>
 </body>
+<footer>
+    derechos reservados
+</footer>
 </html>
