--- a/index.html
+++ b/index.html
@@ -5,15 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styleP.css">
     <link rel="preload" href="styleP.css" as="style">
-     header img {
-            max-height: 50px; /* Ajusta el tamaño del logo */
-        }
-    <title>Acceso seguro</title>
+    <title>Cabina</title>
 </head>
 <body>
 <header>
-   <img src="logo.png" alt="Logo" />
-        <h1>Acceso seguro</h1>
+   
 <nav class="navegacion-principal">
         <button><span><a href="principal.html">Inicio</a></span></button>
         <button><span><a href="seson.html">Iniciar sesion</a></span></button>
