--- a/inicio.html
+++ b/inicio.html
@@ -20,6 +20,7 @@
 </head>
 <body>
 <header>
+    <h1><div class="boton"><a class="diseno" href="Menu.html"></a> </div></h1>
 <nav class="navegacion-principal">
         <button><span><a href="inicio.html">Inicio</a></span></button>
         <button><span><a href="agregar.php">Agregar accesos</a></span></button>
