--- a/inicio.html
+++ b/inicio.html
@@ -25,7 +25,7 @@
         <button><span><a href="inicio.html">Inicio</a></span></button>
         <button><span><a href="agregar.php">Agregar accesos</a></span></button>
         
-        <button><span><a href="contact.html">Dar acceso</a></span></button>
+        <button><span><a href="entradas.php">Dar acceso</a></span></button>
       </nav>
 </header>
 <head>
