--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
     </header>
     <head>
-      <h2 >Guillermo</h2>
+      <h2 >GGM</h2>
       </head>
     <section>
       <img src="img/1223.webp" alt="Imagen de fondo" class="full-image">
